# open-valley

./: .dockerignore  .env.example  .gitignore  .gitignore 2  CLAUDE.md  DATA_SOURCES.md  Dockerfile  Dockerfile.db  README.md  STARTUP.md  TASK_SUMMARY.md  WARREN_HOUSING_RESEARCH.md  docker-compose.prod.yml  docker-compose.yml  mdx-components 2  next.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  source.config.ts  start-dev.sh  stop-dev.sh
.claude/: settings.local 2.json
.github/workflows/: docs-protection.yml
.source/: index.ts  source.config.mjs
api/: pyproject.toml
api/data/str/: test_airbnb_listings.json  test_vrbo_listings.json
api/scripts/: fetch_fpf_emails.py  import_airroi.py  import_parcels.py  import_pttr.py  import_str.py  import_vermont_unified.py  infer_dwellings.py  parse_fpf_emails.py  run_fpf_pipeline.py
api/src/: agent.py  database.py  main.py  models.py  schemas.py
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/data/: page.tsx
app/join/: page.tsx
components/: warren-map.tsx  warren-mapbox.tsx
data/: FPF_POLITICAL_ANALYSIS.md
docs/: CALIBRATION_PROPERTIES.md  DATA_ARCHITECTURE.md  DATA_STATE_ASSESSMENT.md  DEPLOYMENT.md  DWELLING_DATA_ARCHITECTURE.md  FPF_SEMANTIC_SEARCH.md  GLOSSARY.md  PRD.md  STR_DATA_CONFIDENCE.md  TRANSITION_MAP_METHODOLOGY.md
scripts/: 001_create_updates_table.sql  002_create_members_table.sql  generate-freshness.ts
src/: __init__.py  agent.py  main.py  models.py  schemas.py  transformations.py
web/: mdx-components.tsx  next.config.ts  package-lock.json  package.json
(+76 files in other folders)
